--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "antd": "^5.8.2",
+    "apexcharts": "^3.41.1",
     "axios": "^1.3.4",
+    "framer-motion": "^10.12.12",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.7.1",
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
